applyed express with socket.io, now both be hosted in localhost:3000

--- a/Sockets Demo/public/index.html
+++ b/Sockets Demo/public/index.html
@@ -9,7 +9,7 @@
       type="image/png"
       href="https://s2.googleusercontent.com/s2/favicons?domain=www.jacinto.design"
     />
-    <link rel="stylesheet" href="stylesheets/style.css" />
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <!-- Script -->
@@ -19,6 +19,6 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     ></script>
-    <script src="javascripts/script.js"></script>
+    <script src="script.js"></script>
   </body>
 </html>
